--- a/playground/package.json
+++ b/playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@element-plus/icons-playground",
+  "name": "@cs-element-plus/icons-playground",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -8,8 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-svg": "workspace:*",
-    "@element-plus/icons-vue": "workspace:*",
+    "@cs-element-plus/icons-svg": "workspace:*",
+    "@cs-element-plus/icons-vue": "workspace:*",
     "vue": "^3.2.37"
   },
   "devDependencies": {
